JENKINS-72028; deprecated URL instantiation applied