@@ -1848,7 +1848,7 @@ public abstract class PluginManager extends AbstractModelObject implements OnMas
 
         @Override
         public void copy(File target) throws Exception {
-            try (InputStream input =  ProxyConfiguration.getInputStream(new URL(url))) {
+            try (InputStream input =  ProxyConfiguration.getInputStream(new URI(url).toURL())) {
                 Files.copy(input, target.toPath());
             }
         }
@@ -1962,7 +1962,7 @@ public abstract class PluginManager extends AbstractModelObject implements OnMas
     @RequirePOST public FormValidation doCheckPluginUrl(StaplerRequest request, @QueryParameter String value) throws IOException {
         if (StringUtils.isNotBlank(value)) {
             try {
-                URL url = new URL(value);
+                URL url = new URI(value).toURL();
                 if (!url.getProtocol().startsWith("http")) {
                     return FormValidation.error(Messages.PluginManager_invalidUrl());
                 }
@@ -1972,6 +1972,8 @@ public abstract class PluginManager extends AbstractModelObject implements OnMas
                 }
             } catch (MalformedURLException e) {
                 return FormValidation.error(e.getMessage());
+            } catch (URISyntaxException e) {
+                throw new RuntimeException(e);
             }
         }
         return FormValidation.ok();
