@@ -83,8 +83,12 @@ public class ZipExtractionInstaller extends ToolInstaller {
     @Override
     public FilePath performInstallation(ToolInstallation tool, Node node, TaskListener log) throws IOException, InterruptedException {
         FilePath dir = preferredLocation(tool, node);
-        if (dir.installIfNecessaryFrom(new URL(url), log, "Unpacking " + url + " to " + dir + " on " + node.getDisplayName())) {
-            dir.act(new ChmodRecAPlusX());
+        try {
+            if (dir.installIfNecessaryFrom(new URI(url).toURL(), log, "Unpacking " + url + " to " + dir + " on " + node.getDisplayName())) {
+                dir.act(new ChmodRecAPlusX());
+            }
+        } catch (URISyntaxException e) {
+            throw new RuntimeException(e);
         }
         if (subdir == null) {
             return dir;
