@@ -70,6 +70,7 @@ import hudson.util.VersionNumber;
 import java.io.IOException;
 import java.net.HttpURLConnection;
 import java.net.Socket;
+import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.Collections;
@@ -326,11 +327,11 @@ public class JenkinsTest {
         wc.goTo("script");
         wc.assertFails("script?script=System.setProperty('hack','me')", HttpURLConnection.HTTP_BAD_METHOD);
         assertNull(System.getProperty("hack"));
-        WebRequest req = new WebRequest(new URL(wc.getContextPath() + "script?script=System.setProperty('hack','me')"), HttpMethod.POST);
+        WebRequest req = new WebRequest(new URI(wc.getContextPath() + "script?script=System.setProperty('hack','me')").toURL(), HttpMethod.POST);
         wc.getPage(req);
         assertEquals("me", System.getProperty("hack"));
         wc.assertFails("scriptText?script=System.setProperty('hack','me')", HttpURLConnection.HTTP_BAD_METHOD);
-        req = new WebRequest(new URL(wc.getContextPath() + "scriptText?script=System.setProperty('huck','you')"), HttpMethod.POST);
+        req = new WebRequest(new URI(wc.getContextPath() + "scriptText?script=System.setProperty('huck','you')").toURL(), HttpMethod.POST);
         wc.getPage(req);
         assertEquals("you", System.getProperty("huck"));
 
@@ -380,7 +381,7 @@ public class JenkinsTest {
     }
 
     private Page eval(WebClient wc) throws Exception {
-        WebRequest req = new WebRequest(new URL(wc.getContextPath() + "eval"), HttpMethod.POST);
+        WebRequest req = new WebRequest(new URI(wc.getContextPath() + "eval").toURL(), HttpMethod.POST);
         req.setEncodingType(null);
         req.setRequestBody("<j:jelly xmlns:j='jelly:core'>${1+2}</j:jelly>");
         return wc.getPage(req);
